# gst-tracer-otel

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENCE.md  README.md  audit.toml  cliff.toml  justfile  release.toml  tarpaulin-report.html
.devcontainer/: Dockerfile  devcontainer.json  setup-root.sh  setup-user.sh  setup.sh
.github/: otel-config.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/perf/: bench_prom_latency_through_pipeline.main.data
.github/sanitizer/: lsan.supp
.github/workflows/: audit.yml  build-image.yaml  ci.yaml  main.yaml  release.yml  test.yaml
src/: ex.rs  lib.rs  nooplatency.rs  otel.rs  otellogbridge.rs  oteltracer.rs  promlatency.rs
tests/: otel-tracer.rs  oteltracer.rs  promlatency.rs
tracer/noop/: Cargo.toml  README.md
tracer/noop/src/: lib.rs  nooplatency.rs
tracer/otel/: Cargo.toml  README.md
tracer/otel/src/: lib.rs  otellogbridge.rs  oteltracer.rs  pyroscopespanprocessor.rs
tracer/otel/tests/: oteltracer.rs
tracer/prometheus/: Cargo.toml  README.md
tracer/prometheus/src/: lib.rs  promlatency.rs  promlatencyimp.rs
tracer/prometheus/tests/: promlatency.rs
tracer/pyroscope/: Cargo.toml  README.md
tracer/pyroscope/gstreamer/: native.flags.ini
tracer/pyroscope/src/: lib.rs  pyroscope.rs
