[workspace]
resolver = "3"
members = [
    "tracer/otel",
    "tracer/noop",
    "tracer/prometheus",
]

default-members = [
    "tracer/otel",
    "tracer/prometheus",
]

[workspace.package]
version = "0.1.0"
repository = "git@github.com:LrWm3/gst-tracer-otel.git"
edition = "2024"
license = "LGPL"

[workspace.dependencies]
# ── GStreamer stack ───────────────────────────────────────────────
glib = "0.20"
gobject-sys = "0.20"
gstreamer         = { version = "0.23.6", features = ["v1_18"] }
gstreamer-sys     = "0.23.6"  # raw FFI for hook registration

[profile.profiling]
inherits = "release"
debug = true

[profile.test]
inherits = "dev"
