[workspace]
resolver = "3"
members = [
    "tracer/otel",
    "tracer/noop",
    "tracer/prometheus",
    "tracer/pyroscope",
]

default-members = [
    "tracer/prometheus",
]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/LrWm3/gst-tracer-otel"
edition = "2024"
license = "LGPL"

[workspace.dependencies]
# ── GStreamer stack ───────────────────────────────────────────────
glib = "0.20"
gobject-sys = "0.20"
gstreamer         = { version = "0.23.6" }
gstreamer-sys     = "0.23.6"  # raw FFI for hook registration

[package.metadata.release]
pre-release-hook = ["git-cliff", "--output", "CHANGELOG.md"]

[profile.profiling]
inherits = "release"
debug = true

[profile.test]
inherits = "dev"
