[package]
name        = "gst-otel-tracer"
version     = "0.1.0"
edition     = "2021"

[lib]
name = "gstoteltracer"
crate-type  = ["cdylib", "rlib"]

[profile.test]
inherits = "dev"
debug = true
strip = false

[dependencies]
glib.workspace=true
gobject-sys.workspace=true
gstreamer.workspace=true       
gstreamer-sys.workspace=true   
lazy_static = "1.4.0"
prometheus =  "0.14.0"
tiny_http = "0.12.0"
dashmap = "6.1.0"
once_cell = "1.19.0"
opentelemetry = { version = "0.30.0", features = ["trace", "logs", "metrics"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "trace", "metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = ["trace", "logs", "metrics"] }
opentelemetry-stdout = { version = "0.30.0", features = ["logs"] }
[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[features]
noop = []
