[package]
name        = "gst-otel-tracer"
version     = "0.1.0"
edition     = "2021"

[lib]
name = "gstoteltracer"
crate-type  = ["cdylib", "rlib"]

[dependencies]
glib.workspace=true
gobject-sys.workspace=true
gstreamer.workspace=true       
gstreamer-sys.workspace=true   
once_cell = "1.19.0"
opentelemetry = { version = "0.30.0", features = ["trace", "logs", "metrics"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "trace", "metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = ["trace", "logs", "metrics"] }
[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
opentelemetry-stdout = { version = "0.30.0", features = ["logs"] }

[features]
noop = []
capi = []

[package.metadata.cargo-udeps.ignore]
development = ["opentelemetry-stdout"]
