[package]
name        = "gst-prometheus-tracer"
version     = "0.1.0"
edition     = "2021"

[lib]
name = "gstprometheustracer"
crate-type  = ["cdylib", "rlib"]

[dependencies]
glib.workspace=true
gobject-sys.workspace=true
gstreamer.workspace = true
gstreamer-sys.workspace=true   
lazy_static = "1.4.0"
prometheus =  "0.14.0"
tiny_http = "0.12.0"
once_cell = "1.19.0"
[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[features]
noop = []
default = ["v1_18"]
v1_16 = ["gstreamer/v1_16"]
v1_18 = ["gstreamer/v1_18"]